--- a/index.html
+++ b/index.html
@@ -1,48 +1,97 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="assets/css/stylesheet.css">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-		<title>Takyla's Portfolio</title>
-	</head>
-	<body>
-		<!-- Navigation -->
-		<nav class="navbar" role="navigation">
-			<div class="container">
-				<div class="navbar-header">
-				</div>	
-			</div>	
-		</nav>
-		<header class="intro">
-			<div class="intro-body">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-8-col-md-offset-2">
-							<h1 class="brand-heading">My Portfolio</h1>
-							<p class="intro-text">Welcome to my site</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		</header>
-		<section id="about">
-		</section>
-		<section id="portfolio">
-		</section>
-		<section id="contact">
-		</section>	
-		<footer>
-			<div class="container"
-				<p>Copyright &copy; 2014 Takyla Jones</p>
-			</div>
-		</footer>	
-	</body>	
+<html lang="en">
+ <head>
+  <meta charset="utf-8" />
+  <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta content="" name="description" />
+  <meta content="" name="author" />
+  <title>Takyla&#39;s Page</title>
+<!-- Bootstrap Core CSS -->  <link href="css/bootstrap.min.css" rel="stylesheet" />
+<!-- Custom CSS -->  <link href="css/portfolio.css" rel="stylesheet" />
+<!-- Custom Fonts -->  <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+  <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries --><!-- WARNING: Respond.js doesn't work if you view the page via file:// --><!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]--> </head>
+ <body data-spy="scroll" data-target=".navbar-fixed-top" id="page-top">
+<!-- Navigation -->  <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+  <div class="container">
+   <div class="navbar-header">
+    <button class="navbar-toggle" data-target=".navbar-main-collapse" data-toggle="collapse" type="button"></button><a class="navbar-brand page-scroll" href="#page-top"> <span class="light">Takyla Jones </span> </a></div>
+<!-- Collect the nav links, forms, and other content for toggling -->   <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+    <ul class="nav navbar-nav">
+<!-- Hidden li included to remove active class from about link when scrolled up past about section -->     <li class="hidden">
+      &nbsp;</li>
+     <li>
+      <a class="page-scroll" href="#about">About Me</a></li>
+     <li>
+      <a class="page-scroll" href="#portfolio">My Portfolio</a></li>
+     <li>
+      <a class="page-scroll" href="#contact">Contact Me</a></li>
+    </ul>
+   </div>
+<!-- /.navbar-collapse -->  </div>
+<!-- /.container -->  </nav> <!-- Intro Header --><header class="intro">
+  <div class="intro-body">
+   <div class="container">
+    <div class="row">
+     <div class="col-md-8 col-md-offset-2">
+      <h1 class="brand-heading">
+       Bonjour</h1>
+      <p class="intro-text">
+       Welcome to my Portfolio page.</p>
+      <a class="btn btn-circle page-scroll" href="#about"> </a></div>
+    </div>
+   </div>
+  </div>
+  </header> <!-- About Section --><section class="content-section text-center" id="about">
+  <div class="about-section">
+   <div class="container">
+    <div class="col-lg-8 col-lg-offset-2">
+     <h2>
+      A Little bit about me</h2>
+     <p>
+      Hello! I am a 16 year old from Chicago, Il.</p>
+    </div>
+   </div>
+  </div>
+  </section> <!-- Portfolio Section --><section class="text-center" id="portfolio">
+  <div class="portfolio-section">
+   <div class="container">
+    <div class="col-lg-8 col-lg-offset-2">
+     <h2 class="loud">
+      My Portfolio</h2>
+     <p>
+      A project I&#39;ve done</p>
+     <a class="btn btn-default btn-lg" href="/">Flappy Boxes</a></div>
+   </div>
+  </div>
+  </section> <!-- Contact Section --><section class="content-section text-center" id="contact">
+  <div class="row">
+   <div class="col-lg-8 col-lg-offset-2">
+    <h2 class="loud">
+     Contact Me</h2>
+    <p>
+     Contact me at anytime!</p>
+    <p>
+     takylajones@gmail.com</p>
+    <ul class="list-inline banner-social-buttons">
+     <li>
+      <a class="btn btn-default btn-lg" href="https://twitter.com/tvkylv"> <span class="network-name">Twitter</span></a></li>
+     <li>
+      <a class="btn btn-default btn-lg" href="https://github.com/tjjones2016"> <span class="network-name">Github</span></a></li>
+     <li>
+      <a class="btn btn-default btn-lg" href="https://www.facebook.com/tjjones2016"> <span class="network-name">Facebook</span></a></li>
+    </ul>
+   </div>
+  </div>
+  </section> <!-- Footer --><footer>
+  <div class="container text-center">
+   <p>
+    Copyright &copy; 2014</p>
+  </div>
+  </footer> <!-- jQuery Version 1.11.0 --><script src="js/jquery-1.11.0.js"></script><!-- Bootstrap Core JavaScript --><script src="js/bootstrap.min.js"></script><!-- Plugin JavaScript --><script src="js/jquery.easing.min.js"></script><!-- Custom Theme JavaScript --><script src="js/portfolio.js"></script></body>
 </html>
