--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <!-- Navigation -->  <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
   <div class="container">
    <div class="navbar-header">
-    <button class="navbar-toggle" data-target=".navbar-main-collapse" data-toggle="collapse" type="button"></button><a class="navbar-brand page-scroll" href="#page-top"> <span class="light">Kenneth Watkins </span> </a></div>
+    <button class="navbar-toggle" data-target=".navbar-main-collapse" data-toggle="collapse" type="button"></button><a class="navbar-brand page-scroll" href="#page-top"> <span class="light">Takyla Jones </span> </a></div>
 <!-- Collect the nav links, forms, and other content for toggling -->   <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
     <ul class="nav navbar-nav">
 <!-- Hidden li included to remove active class from about link when scrolled up past about section -->     <li class="hidden">
-     </li>
+      &nbsp;</li>
      <li>
       <a class="page-scroll" href="#about">About Me</a></li>
      <li>
@@ -65,7 +65,7 @@
      <h2 class="loud">
       My Portfolio</h2>
      <p>
-     A Project I've done</p>
+      A Project I&#39;ve done</p>
      <a class="btn btn-default btn-lg" href="/">Flappy Boxes</a></div>
    </div>
   </div>
@@ -75,12 +75,13 @@
     <h2 class="loud">
      Contact Me</h2>
     <p>
-    Contact me at anytime!</p>
+     Contact me at anytime!</p>
     <p>
-     <a href="takylajones@gmail.com"</p>
+     <a href="takylajones@gmail.com" p=""> </a></p>
+    <a href="takylajones@gmail.com" p=""> </a>
     <ul class="list-inline banner-social-buttons">
      <li>
-      <a class="btn btn-default btn-lg" href="https://twitter.com/tvkylv"> <span class="network-name">Twitter</span></a></li>
+      <a href="takylajones@gmail.com" p=""> </a><a class="btn btn-default btn-lg" href="https://twitter.com/tvkylv"> <span class="network-name">Twitter</span></a></li>
      <li>
       <a class="btn btn-default btn-lg" href="https://github.com/tjjones2016"> <span class="network-name">Github</span></a></li>
      <li>
@@ -91,7 +92,7 @@
   </section> <!-- Footer --><footer>
   <div class="container text-center">
    <p>
-    Copyright &copy; 2014</p>
+    Copyright Takyla &copy; 2014</p>
   </div>
   </footer> <!-- jQuery Version 1.11.0 --><script src="js/jquery-1.11.0.js"></script><!-- Bootstrap Core JavaScript --><script src="js/bootstrap.min.js"></script><!-- Plugin JavaScript --><script src="js/jquery.easing.min.js"></script><!-- Custom Theme JavaScript --><script src="js/portfolio.js"></script></body>
 </html>
